objects/Time_Log__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Completed_by_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Completed by Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Duration_Minutes__c</fullName>
        <label>Business Duration (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hour_Duration__c</fullName>
        <label>Business Hour Duration (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DurationToNow__c</fullName>
        <description>Time value for start of record to Now()</description>
        <formula>IF( 
     (Start_Time__c =  Stop_Time__c) , 
     Duration_Minutes__c,
     IF(
         Duration_Minutes__c &gt; 0, 
         Duration_Minutes__c,
           (FLOOR(Now() - Start_Time__c) *1440  +
            ROUND(MOD((Now() - Start_Time__c)*24,24),0) * 60  +
            ROUND(MOD((Now() - Start_Time__c)*1440,60),2)
            )
        )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DurationToNow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <description>Duration of the Case in hours</description>
        <formula>Duration_Minutes__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration of the Case in hours</inlineHelpText>
        <label>Duration Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Minutes__c</fullName>
        <formula>FLOOR(Stop_Time__c - Start_Time__c) *1440
+
ROUND(MOD((Stop_Time__c - Start_Time__c)*24,24),0) * 60
+
ROUND(MOD((Stop_Time__c - Start_Time__c)*1440,60),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF(ISBLANK(Stop_Time__c),&apos;&apos; ,TEXT(
FLOOR(Stop_Time__c - Start_Time__c)
) &amp; &quot; Day(s) &quot; &amp;
TEXT(
FLOOR(MOD((Stop_Time__c - Start_Time__c)*24,24))
) &amp;&quot; Hour(s) &quot; &amp;
TEXT(
ROUND(MOD((Stop_Time__c - Start_Time__c)*1440,60),0)
) &amp;&quot; Minute(s) &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <description>Tracks the type of timelog that&apos;s been created. There are three types; Status, Time, and Owner</description>
        <label>Log Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>When this time log is created, the current owner of the case is populated on this field.</description>
        <label>Owner Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Queue__c</fullName>
        <label>Owner - Queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner_User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner - User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Timelog Started</fullName>
                </value>
                <value>
                    <fullName>Timelog Stopped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Time__c</fullName>
        <label>Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Store_Time_as_Datetime__c</fullName>
        <description>This is used for the batch job - if this exists, the batch will look at if whether to close the time log or not. 
This field gets updated every time the Case page refreshes or when the person presses &quot;Cancel&quot;.</description>
        <label>Store Time as Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Store_Time_in_Minutes__c</fullName>
        <label>Store Time in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Store_Time_in_Seconds__c</fullName>
        <formula>MOD((Store_Time_as_Datetime__c - Start_Time__c)*1440,60)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Time in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Changed by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current user of the time log.</description>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Log</label>
    <nameField>
        <displayFormat>T-{000000000}</displayFormat>
        <label>Time Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>